[gd_scene load_steps=2 format=3 uid="uid://beoy26o6oxxsg"]

[ext_resource type="Script" path="res://addons/basic_fsm/ui/property_editor/condition_2_parameters.gd" id="1_ln75s"]

[node name="Condition2Parameters" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
script = ExtResource("1_ln75s")

[node name="CombinatorSelector" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "AND"
popup/item_1/text = "OR"
popup/item_1/id = 1

[node name="ParameterLeftSelector" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ComparatorSelector" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 6
popup/item_0/text = "=="
popup/item_1/text = "!="
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = ">="
popup/item_3/id = 3
popup/item_4/text = "<"
popup/item_4/id = 4
popup/item_5/text = "<="
popup/item_5/id = 5

[node name="ParameterRightSelector" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="EraseButton" type="Button" parent="."]
layout_mode = 2
text = "X"

[connection signal="item_selected" from="CombinatorSelector" to="." method="_on_combinator_selector_item_selected"]
[connection signal="item_selected" from="ParameterLeftSelector" to="." method="_on_parameter_left_selector_item_selected"]
[connection signal="item_selected" from="ComparatorSelector" to="." method="_on_comparator_selector_item_selected"]
[connection signal="item_selected" from="ParameterRightSelector" to="." method="_on_parameter_right_selector_item_selected"]
[connection signal="pressed" from="EraseButton" to="." method="_on_erase_button_pressed"]
